<resources>
    <string name="app_name">FuelApp</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="version">Versión</string>

    <string name="menu_map">Mapa</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_favoritos">Favoritos</string>
    <string name="menu_preferencias">Preferencias</string>
    <string name="menu_listado">Listado</string>
    <string name="menu_share">Compartir FuelApp</string>
    <string name="menu_send">Send</string>

    <string name="mi_adUnitId" translatable="false">ca-app-pub-5611794729293328/8211620290</string>
    <string name="mi_adUnitIdTest" translatable="false">ca-app-pub-3940256099942544/6300978111</string>
    <string name="mi_admodAppId" translatable="false">ca-app-pub-5611794729293328~7804426188</string>
    <string name="title_activity_maps">Map</string>

    <string name="share_options">Compartir con</string>
    <string name="share_message_1">Estoy utilizando FuellApp y es genial!</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_lista">ListaActivity</string>
</resources>
